fix: fix ui special table in view table

--- a/BackendTs/.env
+++ b/BackendTs/.env
@@ -32,13 +32,13 @@ SOCKET_PING_INTERVAL = 25000
 
 
 # Cấu Hình Broker
-BROKER_HOST = 127.0.0.1
-# BROKER_HOST = 192.168.1.158
+# BROKER_HOST = 127.0.0.1
+BROKER_HOST = 192.168.1.67
 BROKER_PORT = 18083
 BROKER_USERNAME = admin
-BROKER_PASSWORD = abcd1234
-# BROKER_PASSWORD = Mqhcpt152002
-BROKER_ID = SERVER
+# BROKER_PASSWORD = abcd1234
+BROKER_PASSWORD = Mqhcpt152002
+BROKER_ID = SERVER_H
 
 # Cấu Hình Jobs
 JOB_CLEANUP_INTERVAL = 86400000
