--- a/BackendTs/.env
+++ b/BackendTs/.env
@@ -32,12 +32,12 @@ SOCKET_PING_INTERVAL = 25000
 
 
 # Cấu Hình Broker
-BROKER_HOST = 127.0.0.1
-# BROKER_HOST = 192.168.1.67
+# BROKER_HOST = 127.0.0.1
+BROKER_HOST = 192.168.1.67
 BROKER_PORT = 18083
 BROKER_USERNAME = admin
-BROKER_PASSWORD = abcd1234
-# BROKER_PASSWORD = Mqhcpt152002
+# BROKER_PASSWORD = abcd1234
+BROKER_PASSWORD = Mqhcpt152002
 BROKER_ID = SERVER_H_1
 
 # Cấu Hình Jobs
