--- a/BackendTs/.env
+++ b/BackendTs/.env
@@ -38,10 +38,12 @@ BROKER_PORT = 18083
 BROKER_USERNAME = admin
 # BROKER_PASSWORD = abcd1234
 BROKER_PASSWORD = Mqhcpt152002
-BROKER_ID = SERVER_H_3
+BROKER_ID = SERVER_1
 
 # Cấu Hình Jobs
 JOB_CLEANUP_INTERVAL = 86400000
 
 # Cấu Hình IP Server Đăng Nhập
 URL_LOGIN = http://192.168.1.53:3332
+
+FIRMWARE_UPLOAD_DIR=src/uploads
