--- a/BackendTs/package.json
+++ b/BackendTs/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^8.12.1",
     "morgan": "^1.10.0",
     "mqtt": "^5.10.4",
+    "multer": "^2.0.1",
     "mysql2": "^3.13.0",
     "node-cron": "^3.0.3",
     "pg": "^8.14.0",
@@ -34,6 +35,7 @@
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/moment": "^2.11.29",
+    "@types/multer": "^1.4.13",
     "@types/node-cron": "^3.0.11",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
