--- a/BackendTs/package.json
+++ b/BackendTs/package.json
@@ -38,6 +38,7 @@
     "@types/moment": "^2.11.29",
     "@types/multer": "^1.4.13",
     "@types/node-cron": "^3.0.11",
+    "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
