--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,6 +22,7 @@
     "react-i18next": "^15.1.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.0.1",
+    "react-tooltip": "^5.29.1",
     "recharts": "^2.15.1",
     "serve": "^14.2.4",
     "socket.io-client": "^4.8.1",
