--- a/BackendTs/package.json
+++ b/BackendTs/package.json
@@ -27,6 +27,8 @@
     "sequelize": "^6.37.6",
     "socket.io": "^4.8.1",
     "sqlite3": "^5.1.7",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "tedious": "^18.6.1",
     "uid": "^2.0.2",
     "winston": "^3.17.0",
@@ -39,6 +41,8 @@
     "@types/moment": "^2.11.29",
     "@types/multer": "^1.4.13",
     "@types/node-cron": "^3.0.11",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
