add .env backend

--- a/BackendTs/.env
+++ b/BackendTs/.env
@@ -1,24 +1,23 @@
 # Cấu Hình Server
 PORT=3335
-JWT_SECRET = 
+JWT_SECRET=your_jwt_secret_here # Nên đặt một giá trị bí mật thực tế
 CORS=*
 # Cấu Hình Kiểu Kiểu DB Kết Nối
-ENABLE_SQL = TRUE
-ENABLE_MONGO = TRUE
+ENABLE_SQL=TRUE
+ENABLE_MONGO=TRUE
 
 # Cấu Hình Kết Nối DB SQL
 # DB_HOST=192.168.1.2
-DB_HOST=127.0.0.1
+DB_HOST=mysql # Thay đổi từ 127.0.0.1 thành tên dịch vụ MySQL trong docker-compose
 DB_PORT=3306
 DB_USERNAME=sti
 DB_PASSWORD=sti@1234
 DB_NAME=sti_mes_2025_dev
 DB_DIALECT=mysql
 
-
 # Cấu Hình Kết Nối DB NoSQL
 # MONGO_HOST=192.168.1.2
-MONGO_HOST=127.0.0.1
+MONGO_HOST=mongodb # Thay đổi từ 127.0.0.1 thành tên dịch vụ MongoDB trong docker-compose
 MONGO_PORT=27017
 MONGO_USERNAME=admin
 MONGO_PASSWORD=password
@@ -26,24 +25,23 @@ MONGO_NAME=iot_gateway
 # MONGO_NAME=iot_gateway_check_data
 
 # Cấu Hình Socket
-SOCKET_CORS_ORIGIN = *
-SOCKET_PING_TIMEOUT = 60000
-SOCKET_PING_INTERVAL = 25000
-
+SOCKET_CORS_ORIGIN=*
+SOCKET_PING_TIMEOUT=60000
+SOCKET_PING_INTERVAL=25000
 
 # Cấu Hình Broker
-BROKER_HOST = 127.0.0.1
-# BROKER_HOST = 192.168.1.67
-BROKER_PORT = 18083
-BROKER_USERNAME = admin
-BROKER_PASSWORD = abcd1234
-# BROKER_PASSWORD = Mqhcpt152002
-BROKER_ID = SERVER_1234
+BROKER_HOST=emqx # Thay đổi từ 127.0.0.1 thành tên dịch vụ EMQX trong docker-compose
+# BROKER_HOST=192.168.1.67
+BROKER_PORT=1883 # EMQX MQTT port là 1883, không phải 18083 (dashboard)
+BROKER_USERNAME=admin
+BROKER_PASSWORD=abcd1234
+# BROKER_PASSWORD=Mqhcpt152002
+BROKER_ID=SERVER_1234
 
 # Cấu Hình Jobs
-JOB_CLEANUP_INTERVAL = 86400000
+JOB_CLEANUP_INTERVAL=86400000
 
 # Cấu Hình IP Server Đăng Nhập
-URL_LOGIN = http://192.168.1.53:3332
+URL_LOGIN=http://192.168.1.53:3332 # Giữ nguyên nếu đây là một dịch vụ bên ngoài Docker Compose
 
 FIRMWARE_UPLOAD_DIR=src/uploads
