convert cmd, payload from db to object ts

--- a/BackendTs/.env
+++ b/BackendTs/.env
@@ -7,8 +7,8 @@ ENABLE_SQL=TRUE
 ENABLE_MONGO=TRUE
 
 # Cấu Hình Kết Nối DB SQL
-# DB_HOST=192.168.1.2
-DB_HOST=mysql # Thay đổi từ 127.0.0.1 thành tên dịch vụ MySQL trong docker-compose
+DB_HOST=localhost
+# DB_HOST=mysql # Thay đổi từ 127.0.0.1 thành tên dịch vụ MySQL trong docker-compose
 DB_PORT=3306
 DB_USERNAME=sti
 DB_PASSWORD=sti@1234
@@ -16,8 +16,8 @@ DB_NAME=sti_mes_2025_dev
 DB_DIALECT=mysql
 
 # Cấu Hình Kết Nối DB NoSQL
-# MONGO_HOST=192.168.1.2
-MONGO_HOST=mongodb # Thay đổi từ 127.0.0.1 thành tên dịch vụ MongoDB trong docker-compose
+MONGO_HOST=localhost
+# MONGO_HOST=mongodb # Thay đổi từ 127.0.0.1 thành tên dịch vụ MongoDB trong docker-compose
 MONGO_PORT=27017
 MONGO_USERNAME=admin
 MONGO_PASSWORD=password
@@ -30,8 +30,8 @@ SOCKET_PING_TIMEOUT=60000
 SOCKET_PING_INTERVAL=25000
 
 # Cấu Hình Broker
-BROKER_HOST=emqx # Thay đổi từ 127.0.0.1 thành tên dịch vụ EMQX trong docker-compose
-# BROKER_HOST=192.168.1.67
+BROKER_HOST=localhost
+# BROKER_HOST=emqx # Thay đổi từ 127.0.0.1 thành tên dịch vụ EMQX trong docker-compose
 BROKER_PORT=1883 # EMQX MQTT port là 1883, không phải 18083 (dashboard)
 BROKER_USERNAME=admin
 BROKER_PASSWORD=abcd1234
