docker compose for deploy ver 1

--- a/BackendTs/.env
+++ b/BackendTs/.env
@@ -2,40 +2,41 @@
 PORT=3335
 JWT_SECRET=your_jwt_secret_here # Nên đặt một giá trị bí mật thực tế
 CORS=*
+
 # Cấu Hình Kiểu Kiểu DB Kết Nối
 ENABLE_SQL=TRUE
 ENABLE_MONGO=TRUE
 
-# Cấu Hình Kết Nối DB SQL
-DB_HOST=localhost
-# DB_HOST=mysql # Thay đổi từ 127.0.0.1 thành tên dịch vụ MySQL trong docker-compose
+# --- Cấu Hình Kết Nối DB SQL ---
+# Thay đổi DB_HOST từ localhost thành tên dịch vụ MySQL trong docker-compose (mysql)
+DB_HOST=mysql
 DB_PORT=3306
 DB_USERNAME=sti
 DB_PASSWORD=sti@1234
 DB_NAME=sti_mes_2025_dev
 DB_DIALECT=mysql
 
-# Cấu Hình Kết Nối DB NoSQL
-MONGO_HOST=localhost
-# MONGO_HOST=mongodb # Thay đổi từ 127.0.0.1 thành tên dịch vụ MongoDB trong docker-compose
+# --- Cấu Hình Kết Nối DB NoSQL ---
+# Thay đổi MONGO_HOST từ localhost thành tên dịch vụ MongoDB trong docker-compose (mongodb)
+MONGO_HOST=mongodb
 MONGO_PORT=27017
 MONGO_USERNAME=admin
 MONGO_PASSWORD=password
 MONGO_NAME=iot_gateway
-# MONGO_NAME=iot_gateway_check_data
+# MONGO_NAME=iot_gateway_check_data # Giữ dòng này nếu bạn có mục đích sử dụng khác
 
 # Cấu Hình Socket
 SOCKET_CORS_ORIGIN=*
 SOCKET_PING_TIMEOUT=60000
 SOCKET_PING_INTERVAL=25000
 
-# Cấu Hình Broker
-BROKER_HOST=localhost
-# BROKER_HOST=emqx # Thay đổi từ 127.0.0.1 thành tên dịch vụ EMQX trong docker-compose
-BROKER_PORT=1883 # EMQX MQTT port là 1883, không phải 18083 (dashboard)
+# --- Cấu Hình Broker (MQTT) ---
+# Thay đổi BROKER_HOST từ localhost thành tên dịch vụ EMQX trong docker-compose (emqx)
+BROKER_HOST=emqx
+BROKER_PORT=1883 # Xác nhận lại rằng đây là cổng MQTT bạn muốn kết nối (phổ biến là 1883)
 BROKER_USERNAME=admin
-BROKER_PASSWORD=abcd1234
-# BROKER_PASSWORD=Mqhcpt152002
+BROKER_PASSWORD=abcd1234 # Đảm bảo mật khẩu này khớp với cấu hình EMQX của bạn
+# BROKER_PASSWORD=Mqhcpt152002 # Giữ dòng này nếu bạn có mục đích sử dụng khác
 BROKER_ID=SERVER_1234
 
 # Cấu Hình Jobs
