--- a/Frontend/docker-compose.yml
+++ b/Frontend/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # Dịch vụ cho môi trường Phát triển (Development)
   fe_dev:
@@ -9,11 +7,11 @@ services:
     volumes:
       - .:/app
     ports:
-      - "5173:5173"
+      # Cổng host:Cổng container
+      - "${VITE_FE_PORT}:5173" # Ánh xạ VITE_FE_PORT của host đến cổng 5173 của container (Vite dev server)
     environment:
       NODE_ENV: development
       VITE_API_BASE_URL: ${VITE_API_BASE_URL}
-      VITE_PORT: ${VITE_PORT}
     command: npm run dev
     env_file:
       - .env
@@ -23,8 +21,11 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      args:
+        VITE_API_BASE_URL: ${VITE_API_BASE_URL}
     ports:
-      - "80:80" # Ánh xạ cổng 80 của host đến cổng 80 của container (Nginx)
+      # Cổng host:Cổng container
+      - "${VITE_FE_PORT}:80" # Ánh xạ VITE_FE_PORT của host đến cổng 80 của container (Nginx)
     env_file:
-      - .env # Đọc các biến môi trường từ file .env (sẽ được envsubst sử dụng)
+      - .env
     # Không có 'depends_on' vì backend không nằm trong cùng compose file
