--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,6 +1,2 @@
-VITE_PORT=3332
-VITE_API_IP=192.168.1.121
-VITE_API_PORT=3332
-VITE_PORT_LOGIN=3332
-VITE_API_PORT_MASTERDATA=3335
 VITE_API_BASE_URL=http://192.168.1.121:3335
+VITE_FE_PORT=6789
